--- a/pom.xml
+++ b/pom.xml
@@ -49,9 +49,9 @@
         </dependency>
 
         <dependency>
-            <!-- Java Native Access Platform -->
+            <!-- Java Native Access -->
             <groupId>net.java.dev.jna</groupId>
-            <artifactId>jna-platform</artifactId>
+            <artifactId>jna</artifactId>
             <version>5.17.0</version>
         </dependency>
 
