Add `jna-platform` as a dependency to resolve GitHub build error

--- a/pom.xml
+++ b/pom.xml
@@ -48,10 +48,15 @@
             <version>RELEASE250</version>
         </dependency>
 
+        <!-- Java Native Access -->
         <dependency>
-            <!-- Java Native Access -->
             <groupId>net.java.dev.jna</groupId>
             <artifactId>jna</artifactId>
+            <version>5.17.0</version>
+        </dependency>
+        <dependency>
+            <groupId>net.java.dev.jna</groupId>
+            <artifactId>jna-platform</artifactId>
             <version>5.17.0</version>
         </dependency>
 
